# py-voice

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  bench_youtube.py  config.py  config.yaml  device.py  docker-compose.yml  main.py  map_reduce.py  pyproject.toml  shell.nix  summarizer.py  transcriber.py  youtube.py
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/adr/: 0001-use-faster-whisper-for-local-stt.md  0002-use-gradio-as-web-ui-framework.md  0003-use-ollama-for-local-llm-summarization.md  0004-dependency-injection-with-protocol-typing.md  0005-env-vars-and-frozen-dataclasses-for-config.md  0006-youtube-subtitle-fast-path-with-yt-dlp.md  0007-character-based-map-reduce-with-recursive-reduce.md  0008-docker-compose-for-development-stack.md  0009-timecodes-and-storyboard-thumbnails.md
tests/: conftest.py  test_app.py  test_config.py  test_device.py  test_main.py  test_map_reduce.py  test_summarizer.py  test_transcriber.py  test_youtube.py
