[project]
name = "py-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "Unlicense"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "gradio>=5.0.0",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12==9.*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --cov=device --cov=transcriber --cov=app --cov=main --cov-branch --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["device", "transcriber", "app", "main"]

[tool.coverage.report]
show_missing = true
skip_covered = false
